--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -622,3 +622,5 @@ endif # POWER_SUPPLY
 
 source "drivers/power/avs/Kconfig"
 source "drivers/power/qcom/Kconfig"
+
+source "drivers/power/tusb422/Kconfig
