drivers: power: Import FUSB302 USB Power Delivery driver
- Package : tb_8704v_oscv1.0_.tar
- Estimated CAF tag: LA.UM.5.6.r1-04300-89xx.0

--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -599,6 +599,10 @@ config QPNP_TYPEC
 	  adds support to report these type-C parameters via the power-supply
 	  framework.
 
+config USB_FUSB302
+        bool "Enable fusb422 USB Power Delivery"
+        default n
+
 config MSM_BCL_CTL
 	bool "BCL Framework driver"
 	help
