--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -82,3 +82,4 @@ obj-$(CONFIG_MSM_BCL_PERIPHERAL_CTL) += bcl_peripheral.o
 obj-$(CONFIG_POWER_RESET)	+= reset/
 obj-$(CONFIG_ARCH_MSM)		+= qcom/
 obj-$(CONFIG_TUSB422)           += tusb422/
+obj-$(CONFIG_USB_FUSB302)       += fusb302/
